# deepin-update-manager

./: CMakeLists.txt  README.md  README.zh_CN.md  REUSE.toml
.reuse/: dep5
dbus/: org.deepin.UpdateManager1.xml
debian/: changelog  control  copyright
misc/dbus/system-services/: org.deepin.UpdateManager1.service
misc/polkit-1/actions/: org.deepin.UpdateManager.policy
misc/polkit-1/rules.d/: org.deepin.update-manager.rules
misc/systemd/system/: deepin-update-manager.service  dum-list-remote-refs-stdout.socket  dum-list-remote-refs.service  dum-upgrade@.service
src/: Branch.cpp  Branch.h  CMakeLists.txt  Idle.cpp  Idle.h  ManagerAdaptor.cpp  ManagerAdaptor.h  Report.cpp  Report.h  checker.cpp  checker.h  common.h  downloader.cpp  downloader.h  idle.cpp  idle.h  installer.cpp  installer.h  main.cpp  updatePlatform.cpp  updatePlatform.h  updatemanager.cpp  updatemanager.h
